[package]
name = "pbf-craft"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
base16ct = "0.2.0"
byteorder = "1"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
md-5 = "0.10.5"
postgres-types = { version = "0.2.4", features = ["derive"] }
protobuf = "2"
quick_cache = "0.6"
rayon = "1"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"

[build-dependencies]
protobuf-codegen-pure = "2"
