[package]
name = "pbf-craft"
version = "0.9.1"
edition = "2021"
authors = ["Lurker <cloverzero@gmail.com>"]
repository = "https://github.com/nextbillion-ai/pbf-craft"
homepage = "https://github.com/nextbillion-ai/pbf-craft"
description = "A Rust library for reading and writing OpenSteetMap PBF file format."
readme = "README.md"
categories = ["encoding"]
keywords = ["openstreetmap", "osm", "pbf", "protocolbuffer", "protobuf"]
license = "MIT"

exclude = ["resources"]

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
base16ct = "0.2.0"
byteorder = "1"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
md-5 = "0.10.5"
protobuf = "2"
quick_cache = "0.6"
rayon = "1"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"

[build-dependencies]
protobuf-codegen-pure = "2"
